--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -14,3 +14,4 @@
 @using ReportHub.Web.Models.Plans
 @using ReportHub.Web.Models.Sales
 @using ReportHub.Web.Services.Plan
+@using ReportHub.Web.Models.Clients
