--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
@@ -3,7 +3,16 @@
 @inject IClientService ClientService
 @rendermode InteractiveServer
 
-<h3 class="text-xl font-semibold mb-4">Client List</h3>
+
+<div class="row text-center">
+    <div class="col">
+        <h3 class="text-xl font-semibold mb-4">Clients</h3>
+    </div>
+    <div class="col">
+        <button type="button" class="btn btn-outline-success" @onclick="ShowNewClientModal">New Client</button>
+    </div>
+</div>
+
 
 @if (clients == null)
 {
@@ -77,19 +86,81 @@ else
     </div>
 
 
+
+    @* NEW CLIENT MODAL *@
+    @if (isNewClientModalVisible)
+    {
+        <div class="modal show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">New Client</h5>
+                        <button type="button" class="btn-close" @onclick="CloseNewClientModal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <label class="form-label">Name</label>
+                            <input type="text" class="form-control" @bind="name" />
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Specialization</label>
+                            <input type="text" class="form-control" @bind="specialization" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" @onclick="CloseNewClientModal">Cancel</button>
+                        <button class="btn btn-primary" @onclick="SubmitNewClient">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
+
 }
 
 @code {
     [Inject] SelectedClientState SelectedClientState { get; set; }
     [Inject] NavigationManager NavigationManager { get; set; }
 
-
     private IEnumerable<ClientForGettingDto> clients;
     private int _page = 1;
     private int _pageSize = 10;
-
     private string _sortBy = nameof(ClientForGettingDto.Id);
     private bool _ascending = true;
+    private bool isNewClientModalVisible = false;
+    private string name;
+    private string specialization;
+
+
+    private void ShowNewClientModal()
+    {
+        isNewClientModalVisible = true;
+    }
+
+
+    private void CloseNewClientModal()
+    {
+        isNewClientModalVisible = false;
+    }
+
+    private async Task SubmitNewClient()
+    {
+        var command = new CreateClientCommand(name, specialization);
+
+        try
+        {
+            await ClientService.AddNewClientAsync(command);
+            isNewClientModalVisible = false;
+            await LoadClientsAsync();
+        }
+        catch (Exception)
+        {
+
+            throw;
+        }
+    }
+
 
     protected override async Task OnInitializedAsync()
     {
@@ -138,7 +209,6 @@ else
         var symbol = _ascending ? "↑" : "↓";
         return new MarkupString($"<span>{symbol}</span>");
     }
-
 
     private void NavigateToDetails(ClientForGettingDto client)
     {
