--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
@@ -4,6 +4,8 @@
 @inject IPlanService PlanService
 @inject IJSRuntime JS
 @rendermode InteractiveServer
+<PageTitle>Client Details</PageTitle>
+
 
 <h3>Client Details</h3>
 
