--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientList.razor
@@ -4,6 +4,7 @@
 @inject IJSRuntime JS
 @rendermode InteractiveServer
 @using System.ComponentModel.DataAnnotations
+<PageTitle>Client List</PageTitle>
 
 
 <div class="row text-center">
