--- a/ReportHub/ReportHub.Web/Components/Pages/Home.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Home.razor
@@ -2,6 +2,19 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<div class="container">
+    <div class="card border-0 mt-5">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="/welcomeIllustration.png" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
