--- a/ReportHub/ReportHub.Web/Components/Pages/Home.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Home.razor
@@ -10,9 +10,9 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">REPORT HUB</h5>
+                    <p class="card-text">Access detailed company reports, track performance metrics, and stay informed with comprehensive data insights tailored for effective business analysis.</p>
+                    <p class="card-text"><small class="text-body-secondary">Stay updated with real-time company insights.</small></p>
                 </div>
             </div>
         </div>
