Login page communication and get access token

--- a/ReportHub/ReportHub.Web/Components/_Imports.razor
+++ b/ReportHub/ReportHub.Web/Components/_Imports.razor
@@ -15,3 +15,5 @@
 @using ReportHub.Web.Models.Sales
 @using ReportHub.Web.Services.Plan
 @using ReportHub.Web.Models.Clients
+@using ReportHub.Web.Models.Auth
+@using ReportHub.Web.Services.Auth
