--- a/ReportHub/ReportHub.Web/Components/Layout/MainLayout.razor
+++ b/ReportHub/ReportHub.Web/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Components.Authorization;
+@inherits LayoutComponentBase
+
 
 <div class="page">
     <div class="sidebar">
@@ -7,7 +9,14 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="login">Login</a>
+            <AuthorizeView>
+                <NotAuthorized>
+                    <a href="/login">Login</a>
+                </NotAuthorized>
+                <Authorized>
+                    <a href="/logout">Logout</a>
+                </Authorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
