--- a/ReportHub/ReportHub.Web/Components/Layout/NavMenu.razor
+++ b/ReportHub/ReportHub.Web/Components/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Authorization;
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Reporthub</a>
     </div>
@@ -13,11 +15,17 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="clients">
-                <span aria-hidden="true"></span> Clients
-            </NavLink>
-        </div>
+
+        <AuthorizeView Roles="Administrator,User">
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="clients">
+                        <span aria-hidden="true"></span> Clients
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
+
     </nav>
 </div>
 
