--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
@@ -48,6 +48,12 @@ else
                         }
                         else if (items != null && items.Any())
                         {
+                            <div class="row mb-3">
+                                <div class="col-2">
+                                    <button class="btn btn-sm btn-success btn-sm" @onclick="() => ShowAddNewItemModal()">New Item</button>
+                                </div>
+                            </div>
+
                             <table class="table">
                                 <thead>
                                     <tr>
@@ -237,6 +243,47 @@ else
 }
 
 
+@* ADD ITEM MODAL *@
+@if (isAddNewItemModalVisible)
+{
+    <div class="modal show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add New Item</h5>
+                    <button type="button" class="btn-close" @onclick="CloseAddNewItemModal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label class="form-label">Name</label>
+                        <input type="text" class="form-control" @bind="newItemName" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Description</label>
+                        <input type="text" class="form-control" @bind="newItemDescription" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Price</label>
+                        <input type="number" class="form-control" @bind="newItemPrice" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Currency</label>
+                        <input type="text" class="form-control" @bind="newItemCurrency" />
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" @onclick="CloseAddNewItemModal">Cancel</button>
+                    <button class="btn btn-primary" @onclick="SubmitAddNewItem">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+
+
+
+
 @* ITEM DELETE MODAL *@
 @if (isDeleteModalVisible)
 {
@@ -313,6 +360,13 @@ else
 }
 
 
+
+@* SUCCESSFUL ADD ITEM *@
+@if (addNewItemSuccess)
+{
+    JS.InvokeVoidAsync("showAlert", "New item added successfully!");
+    addNewItemSuccess = false;
+}
 
 @* SUCCESSFUL SALE TOAST *@
 @if (saleSuccess)
@@ -529,10 +583,77 @@ else
     private bool isDeleteModalVisible = false;
     private ItemForGettingDto itemToDelete;
     private bool isSellItemModalVisible = false;
+    private bool isAddNewItemModalVisible = false;
     private ItemForGettingDto itemToSell;
     private decimal sellAmount;
     private string sellDateString = DateTime.Today.ToString("yyyy-MM-dd'T'HH:mm:ss.fffzzz");
     bool saleSuccess = false;
+    bool addNewItemSuccess = false;
+    private string newItemName;
+    private string newItemDescription;
+    private decimal newItemPrice;
+    private string newItemCurrency;
+
+
+    private void ShowAddNewItemModal()
+    {
+        isAddNewItemModalVisible = true;
+    }
+
+    private void CloseAddNewItemModal()
+    {
+        isAddNewItemModalVisible = false;
+    }
+
+    private async Task SubmitAddNewItem()
+    {
+        if (SelectedClientState.SelectedClient is null) return;
+
+        if (string.IsNullOrWhiteSpace(newItemName))
+        {
+            await JS.InvokeVoidAsync("alert", "Item name field is required");
+            return;
+        }
+
+        if (string.IsNullOrWhiteSpace(newItemDescription))
+        {
+            await JS.InvokeVoidAsync("alert", "Item description field is required");
+            return;
+        }
+
+        if (newItemPrice <= 0)
+        {
+            await JS.InvokeVoidAsync("alert", "Item price field is required");
+            return;
+        }
+
+        if (string.IsNullOrWhiteSpace(newItemCurrency) || newItemCurrency.Length != 3)
+        {
+            await JS.InvokeVoidAsync("alert", "Item currency is required and have to be 3 length");
+            return;
+        }
+
+        var command = new CreateItemCommand
+        (
+            SelectedClientState.SelectedClient.Id, 
+            newItemName, 
+            newItemDescription, 
+            newItemPrice, 
+            newItemCurrency.ToUpper()
+        );
+
+        try
+        {
+            await ClientService.AddNewItemOfClientAsync(command);
+            isAddNewItemModalVisible = false;
+            await LoadItemsAsync(); // Refresh items
+            addNewItemSuccess = true;
+        }
+        catch (Exception)
+        {
+            // Optionally log or show error
+        }
+    }
 
 
     private void ShowSellItemModal(ItemForGettingDto item)
@@ -579,7 +700,6 @@ else
             // Optionally log or show error
         }
     }
-
 
 
 
