Adding items into plans

--- a/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
+++ b/ReportHub/ReportHub.Web/Components/Pages/Client/ClientDetails.razor
@@ -75,6 +75,7 @@ else
                                             <td>
                                                 <button class="btn btn-danger btn-sm" @onclick="() => ShowDeleteModal(item)">Delete</button>
                                                 <button class="btn btn-success btn-sm" @onclick="() => ShowSellItemModal(item)">Sell</button>
+                                                <button class="btn btn-primary btn-sm" @onclick="() => ShowAddItemToPlanModal(item)">Add To Plans</button>
                                             </td>
                                         </tr>
                                     }
@@ -243,6 +244,66 @@ else
 }
 
 
+
+@* ADD PLAN MODAL *@
+@if (isPlanAddModalVisible)
+{
+    <div class="modal show d-block" tabindex="-1" style="background-color: rgba(0,0,0,0.5);">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Add New Plan</h5>
+                    <button type="button" class="btn-close" @onclick="CloseAddNewPlanItemModal"></button>
+                </div>
+                <div class="modal-body">
+
+                    <div class="row">
+                        <div class="mb-3">
+                            <label class="form-label">Amount</label>
+                            <input type="number" class="form-control" @bind="addItemToPlanAmount" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label class="form-label">Start Date</label>
+                                <input type="datetime" class="form-control" @bind="addItemToPlanStartDate" />
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label class="form-label">End Date</label>
+                                <input type="datetime" class="form-control" @bind="addItemToPlanEndDate" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="mb-3">
+                            <label class="form-label">Status</label>
+                            <select class="form-select" @bind="addItemToPlanStatus">
+                                @foreach (PlanStatus status in Enum.GetValues(typeof(PlanStatus)))
+                                {
+                                    <option value="@status">@status</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" @onclick="CloseAddNewPlanItemModal">Cancel</button>
+                    <button class="btn btn-primary" @onclick="SubmitAddNewPlan">Add</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+}
+
+
 @* ADD ITEM MODAL *@
 @if (isAddNewItemModalVisible)
 {
@@ -361,6 +422,13 @@ else
 
 
 
+@* SUCCESSFUL ADD PLAN *@
+@if (addNewPlanSuccess)
+{
+    JS.InvokeVoidAsync("showAlert", "New plan added successfully!");
+    addNewPlanSuccess = false;
+}
+
 @* SUCCESSFUL ADD ITEM *@
 @if (addNewItemSuccess)
 {
@@ -470,6 +538,66 @@ else
     private bool _planSortByAscending = true;
     private bool isPlanDeleteModalVisible = false;
     private PlanForGettingDto planToDelete;
+    private bool isPlanAddModalVisible = false;
+    private string newPlanClientId;
+    private string newPlanItemId;
+    private decimal newPlanAmount;
+    private DateTime newPlanStartDate;
+    private DateTime newPlanEndDate;
+    private int  newPlanStatus;
+
+    private string addItemToPlanClientId;
+    private string addItemToPlanItemId;
+    private decimal addItemToPlanAmount;
+    private DateTime addItemToPlanStartDate = DateTime.UtcNow;
+    private DateTime addItemToPlanEndDate = DateTime.UtcNow;
+    private PlanStatus addItemToPlanStatus;
+    private bool addNewPlanSuccess = false;
+
+    private void CloseAddNewPlanItemModal()
+    {
+        isPlanAddModalVisible = false;
+    }
+
+    private async Task SubmitAddNewPlan()
+    {
+        if (SelectedClientState.SelectedClient is null) return;
+
+        if (addItemToPlanAmount <= 0)
+        {
+            await JS.InvokeVoidAsync("alert", "Plan amount should be greater than zero");
+            return;
+        }
+
+        if (addItemToPlanStartDate > addItemToPlanEndDate)
+        {
+            await JS.InvokeVoidAsync("alert", "Plan start date can't be greater than plan end date");
+            return;
+        }
+
+        var command = new CreatePlanCommand
+        (
+            addItemToPlanClientId,
+            addItemToPlanItemId,
+            addItemToPlanAmount,
+            addItemToPlanStartDate,
+            addItemToPlanEndDate,
+            addItemToPlanStatus
+        );
+
+        try
+        {
+            await ClientService.AddNewPlanOfClientAsync(command);
+            isAddNewItemModalVisible = false;
+            await LoadPlansAsync(); // Refresh plans
+            addNewPlanSuccess = true;
+        }
+        catch (Exception)
+        {
+            // Optionally log or show error
+        }
+    }
+
 
 
     private void ShowPlanDeleteModal(PlanForGettingDto plan)
@@ -593,6 +721,15 @@ else
     private string newItemDescription;
     private decimal newItemPrice;
     private string newItemCurrency;
+
+
+
+    private void ShowAddItemToPlanModal(ItemForGettingDto item)
+    {
+        addItemToPlanClientId = SelectedClientState.SelectedClient.Id;
+        addItemToPlanItemId = item.Id;
+        isPlanAddModalVisible = true;
+    }
 
 
     private void ShowAddNewItemModal()
