--- a/ReportHub/ReportHub.Web/Components/App.razor
+++ b/ReportHub/ReportHub.Web/Components/App.razor
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="@Assets["ReportHub.Web.styles.css"]" />
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender:false)" />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender:false)"/>
     <script src="_framework/blazor.web.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/site.js"></script>
